[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloxone"
dynamic = ["version"]
description = "BloxOne API Wrapper Module"
readme = "README.rst"
license = "BSD-2-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Chris Marrison", email = "chris@infoblox.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml",
    "requests",
]

[project.urls]
Documentation = "https://python-bloxone.readthedocs.io/en/latest/"
Homepage = "https://github.com/ccmarris/python-bloxone"
Source = "https://github.com/ccmarris/python-bloxone"
Tracker = "https://github.com/ccmarris/python-bloxone/issues"

[tool.hatch.version]
path = "bloxone/__init__.py"

[tool.setuptools.packages.find]
where = ["bloxone/"]

[tool.hatch.build.targets.sdist]
include = [
    "/bloxone",
]
